--- a/Social Media Site/Views/Home/About.cshtml
+++ b/Social Media Site/Views/Home/About.cshtml
@@ -6,5 +6,6 @@
     <h1 class="display-4">About Collin Kite - C37</h1>
     <img src="https://www.collinkite.com/assets/img/profile-img.jpg" alt="Image of Collin Kite" class="about-img";
     <br/>
+    <p>I chose the Code Theme Social Media Because I like coding</p>
     <p>Hi! I'm Collin Kite, a fullstack software engineer from Utah. I have a passion for creating software that is both beautiful and functional. I have experience in a wide range of technologies, including C#, Java, C++, Python, and JavaScript. </p>
 </div>
