--- a/Social Media Site/Views/Home/Index.cshtml
+++ b/Social Media Site/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To My Social Media Website</h1>
+    <p>I'm Glad you're Here, This is a site where you can upload photos and comment on other people profiles. Register <a asp-area="Identity" asp-page="/Account/Register">here to get started</a></p>
 </div>
