--- a/Social Media Site/Views/Shared/_LoginPartial.cshtml
+++ b/Social Media Site/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,15 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-        //Get User ID
-        var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
-        <li class="nav-item">
+    
+    var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+    <li class="nav-item">
+        <a class="nav-link" asp-asp-controller="Home" asp-action="Search">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-asp-controller="Home" asp-action="UploadImage">Upload Image</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" asp-asp-controller="Home" asp-action="EditUser">Edit Profile</a>
     </li>
     <li class="nav-item">
