--- a/Social Media Site/_ViewImports.cshtml
+++ b/Social Media Site/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Social_Media_Site
 @using Social_Media_Site.Models
+@using Microsoft.AspNetCore.Identity;
+@using Microsoft.AspNetCore.Mvc;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
